# distribution-opensuse

./: .gitignore  .travis.yml  LICENSE  README.md  cabal.project  distribution-opensuse.cabal  guess-changelog.hs  guess-changelog.md
.github/workflows/: haskell-ci.yml
src/OpenSuse/: GuessChangeLog.hs  Prelude.hs  StripSpace.hs
src/OpenSuse/Prelude/: Parser.hs  PrettyPrinting.hs
src/OpenSuse/Prelude/PrettyPrinting/: Orphans.hs
src/OpenSuse/Types/: ChangeLog.hs  EMailAddress.hs  Issue.hs  PackageName.hs  ProjectId.hs  RequestId.hs  UserName.hs
tests/: test-strip-space.hs
