name:               distribution-opensuse
version:            1.0.0
synopsis:           Types, functions, and tools to manipulate the openSUSE distribution
description:        Types, functions, and tools to manipulate the openSUSE distribution.
license:            BSD3
license-file:       LICENSE
author:             Peter Simons
maintainer:         simons@cryp.to
tested-with:        GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.3
category:           Distribution
homepage:           https://github.com/peti/distribution-opensuse/
build-type:         Simple
extra-source-files: README.md
cabal-version:      >= 1.10

library
  exposed-modules:    OpenSuse.Prelude
                      OpenSuse.Prelude.Parser
                      OpenSuse.Prelude.PrettyPrinting
                      OpenSuse.Prelude.PrettyPrinting.Orphans
                      OpenSuse.Types.ChangeLog
                      OpenSuse.Types.EMailAddress
                      OpenSuse.Types.Issue
                      OpenSuse.Types.PackageName
                      OpenSuse.Types.ProjectId
                      OpenSuse.Types.RequestId
                      OpenSuse.Types.UserName
  hs-source-dirs:     src
  build-depends:      base         < 5
                    , aeson
                    , binary
                    , bytestring
                    , containers
                    , deepseq
                    , extra
                    , hashable
                    , hsemail
                    , parsec-class
                    , pretty
                    , text
                    , time
  default-language:   Haskell2010
  default-extensions: MonadFailDesugaring
  ghc-options:        -Wall -Wcompat -Wincomplete-uni-patterns -Wincomplete-record-updates
                      -Wredundant-constraints
